# award-extractor

./: .gitignore  HISTORY.md  README.md  agents.md  award_extractor.py  gradio_app.py  main.py  outputs.md  overtime_quality_evaluator.py  pyproject.toml  review_outputs.py  script_6_final_consistency_review.py
Plans/: overtime_interpretation_refactor.md
data/processed/: MA000018.csv  MA000018.json
resources/: HISTORY.md  METHODOLOGY.md  OUTSTANDING_PIECES.md  TECHNICAL_GUIDE.md  Template.md  original_OT.md  outputs.md  simplification.md  streamlit_report.md
resources/Plans/: OUTSTANDING_PIECES.md  overtime_interpretation_refactor.md  simplification.md
resources/Templates/: overtime_example.md
src/: Overtime_System_Prompt.py  WIP - script_3b_agentic_review_workflow.py  __init__.py  award_interpreter.py  award_interpreter_prompt.py  award_pipeline.py  core_overtime_pseudocode.py  fetch_award.py  migrate_processed_outputs_to_award_first.py  output_paths.py  overtime_clause_generator.py  overtime_entitlement_summary.py  overtime_interpretation.py  overtime_interpretation_agentic_review.py  overtime_quality_evaluator.py  payment_clause_classifier.py  payment_clause_classifier_prompt.py  script_1_fetch_award.py  script_1_pdf_to_award_json.py  script_1b_generate_fetch_supporting_artifacts.py  script_2_classify_payments.py  script_2_classify_payments_prompt.py  script_3_generate_overtime_ruleset.py  script_3_interpret_overtime.py  script_3_interpret_overtime_prompt.py  script_3_part1_classify_overtime_clauses.py  script_3_part2_generate_overtime_interpretation.py  script_3b_agentic_review_overtime_interpretation.py  script_3b_agentic_review_workflow.py  script_3b_review_overtime_interpretation.py  script_3b_shared_prompts.py  script_4a_generate_overtime_clause.py  script_4a_summarize_overtime.py  script_4a_summarize_overtime_prompt.py  script_4b_review_overtime_entitlements.py  script_5b_generate_overtime_pseudocode.py  script_5b_validate_overtime_pseudocode.py  script_6_final_consistency_review.py
src/Archive/: award_interpreter.py  script_4a_generate_overtime_clause_legacy.py  script_4a_prompt_Overtime_System_Prompt.py  script_4a_summarize_overtime_legacy.py  script_4b_review_overtime_entitlements_legacy.py
src/common/: __init__.py  active_pipeline_paths.py  award_sources.py  llm_io.py  model_call_budget.py  output_naming.py  output_paths.py  overtime_rules.py  overtime_rulesets.py  pipeline_context.py  pipeline_io.py  pipeline_runtime.py  rule_inventory.py
src/prompts/: __init__.py  agentic_review.py  core_overtime_pseudocode.py  overtime_guide_formatting.py  overtime_interpretation.py  overtime_interpretation_review.py  overtime_prompt_shared.py  overtime_ruleset.py  payment_clause_classification.py  step_3_1_generate_ruleset.py  (+6 more)
streamlit_review/: __init__.py  app.py  output_data.py  pipeline_runs.py  run_pipeline_background.py
tests/: test_active_pipeline_paths.py  test_award_interpreter.py  test_award_pipeline.py  test_core_overtime_pseudocode.py  test_fetch_award.py  test_overtime_clause_generator.py  test_overtime_entitlement_review.py  test_overtime_entitlement_summary.py  test_overtime_interpretation.py  test_overtime_interpretation_agentic_review.py  test_overtime_interpretation_review.py  test_overtime_pseudocode_validation.py  test_overtime_quality_evaluator.py  test_payment_clause_classifier.py  test_pdf_to_award_json.py  test_pipeline_context.py  test_processed_output_migration.py  test_step_3_1_validation_warnings.py  test_streamlit_review_output_data.py
(+37 files in other folders)
