[project]
name = "award-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "lxml>=6.1.1",
    "openai>=2.13.0",
    "pandas>=3.0.3",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.34.2",
]

[project.scripts]
award-pipeline = "src.award_pipeline:main"
script-1-fetch-award = "src.script_1_fetch_award:main"
script-2-classify-payments = "src.script_2_classify_payments:main"
script-3-interpret-overtime = "src.script_3_interpret_overtime:main"
script-3b-review-overtime-interpretation = "src.script_3b_review_overtime_interpretation:main"
script-4a-summarize-overtime = "src.script_4a_summarize_overtime:main"
script-4a-generate-overtime-clause = "src.script_4a_generate_overtime_clause:main"
script-4b-review-overtime-entitlements = "src.script_4b_review_overtime_entitlements:main"
script-5b-generate-overtime-pseudocode = "src.script_5b_generate_overtime_pseudocode:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
