[project]
name = "award-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "lxml>=6.1.1",
    "openai>=2.13.0",
    "openai-agents>=0.17.6",
    "pandas>=3.0.3",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[project.scripts]
award-pipeline = "src.award_pipeline:main"
script-1-fetch-award = "src.script_1_fetch_award:main"
script-1-pdf-to-award-json = "src.script_1_pdf_to_award_json:main"
script-1b-generate-fetch-supporting-artifacts = "src.script_1b_generate_fetch_supporting_artifacts:main"
script-2-classify-payments = "src.script_2_classify_payments:main"
script-3-interpret-overtime = "src.script_3_interpret_overtime:main"
script-3-generate-overtime-ruleset = "src.script_3_generate_overtime_ruleset:main"
script-3b-review-overtime-interpretation = "src.script_3b_review_overtime_interpretation:main"
script-3b-agentic-review-overtime-interpretation = "src.script_3b_agentic_review_overtime_interpretation:main"
script-4a-summarize-overtime = "src.script_4a_summarize_overtime:main"
script-5b-generate-overtime-pseudocode = "src.script_5b_generate_overtime_pseudocode:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
