[project]
name = "award-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "lxml>=6.1.1",
    "openai>=2.13.0",
    "openai-agents>=0.17.6",
    "pandas>=3.0.3",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[project.scripts]
award-pipeline = "src.award_pipeline:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
